[gd_scene load_steps=5 format=3 uid="uid://cjdqvinex6imh"]

[ext_resource type="Script" path="res://scenes/spawn_pins.gd" id="1_r22rf"]
[ext_resource type="Texture2D" uid="uid://dotfyf8ltngul" path="res://assets/oso.png" id="2_qw0xo"]
[ext_resource type="Script" path="res://scripts/example.gd" id="3_grfu2"]
[ext_resource type="Script" path="res://scenes/Timer_pop.gd" id="5_qkam1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r22rf")
metadata/_edit_vertical_guides_ = [2435.0, 2337.0]

[node name="Oso" type="Sprite2D" parent="."]
position = Vector2(579, 429)
texture = ExtResource("2_qw0xo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 808.0
offset_top = 103.0
offset_right = 987.0
offset_bottom = 142.0
script = ExtResource("3_grfu2")

[node name="Bebida_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -22.0
offset_top = -14.0
offset_right = 208.0
offset_bottom = 53.0
text = "Asignar"

[node name="Bebida_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.134
anchor_top = -0.201
anchor_right = -0.134
anchor_bottom = -0.201
offset_left = 9.986
offset_top = -5.161
offset_right = 234.986
offset_bottom = 62.839
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Bebida: 100%"
horizontal_alignment = 1

[node name="Comida_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -17.0
offset_top = 78.0
offset_right = 202.0
offset_bottom = 149.0
text = "Asignar"

[node name="Comida_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.134
anchor_top = -0.201
anchor_right = -0.134
anchor_bottom = -0.201
offset_left = 7.986
offset_top = 87.839
offset_right = 232.986
offset_bottom = 155.839
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Comida: 100%"
horizontal_alignment = 1

[node name="Juegos_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -11.0
offset_top = 179.0
offset_right = 205.0
offset_bottom = 255.0
text = "Asignar"

[node name="Juegos_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.134
anchor_top = -0.201
anchor_right = -0.134
anchor_bottom = -0.201
offset_left = 13.986
offset_top = 189.839
offset_right = 238.986
offset_bottom = 257.839
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Juegos: 100%"
horizontal_alignment = 1

[node name="Timer_pop" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("5_qkam1")

[connection signal="button_down" from="Control/Bebida_Button" to="Control" method="_on_button_button_down"]
[connection signal="pressed" from="Control/Bebida_Button" to="Control" method="_on_bebida_button_pressed"]
[connection signal="button_down" from="Control/Comida_Button" to="Control" method="_on_button_button_down"]
[connection signal="pressed" from="Control/Comida_Button" to="Control" method="_on_comida_button_pressed"]
[connection signal="button_down" from="Control/Juegos_Button" to="Control" method="_on_button_button_down"]
[connection signal="pressed" from="Control/Juegos_Button" to="Control" method="_on_juegos_button_pressed"]
